Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17894

Wrong default lnet/lnd params

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Regression introduced by

      7e01787863 LU-12452 lnet: allow to set IP ToS value per-NI
      

      The peer_timeout parameter is no longer being set to its default value correctly. This may have impacted other parameters as well.

      cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl net add --net tcp --if cxi0
      sh: /usr/sbin/ksocklnd-config: No such file or directory
      cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl net show -v
      net:
      -     net type: lo
            local NI(s):
            -     nid: 0@lo
                  status: up
                  statistics:
                        send_count: 0
                        recv_count: 0
                        drop_count: 0
                  tunables:
                        peer_timeout: 0
                        peer_credits: 0
                        peer_buffer_credits: 0
                        credits: 0
                  dev cpt: 0
                  CPT: "[0,1,2,3,4,5,6,7]"
      -     net type: tcp
            local NI(s):
            -     nid: 172.18.2.1@tcp
                  status: up
                  interfaces:
                        0: cxi0
                  statistics:
                        send_count: 0
                        recv_count: 0
                        drop_count: 0
                  tunables:
                        peer_timeout: 0
                        peer_credits: 8
                        peer_buffer_credits: 0
                        credits: 256
                  lnd tunables:
                        conns_per_peer: 4
                        timeout: 49
                        tos: -1
                  dev cpt: 4
                  CPT: "[0,1,2,3,4,5,6,7]"
      cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests #
      

      We can see peer_timeout is 0 when it ought to be 180.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: